versão final enviada para CEC2016

--- a/doc/pubs/IEEE-CEC2016/tex/paper.tex
+++ b/doc/pubs/IEEE-CEC2016/tex/paper.tex
@@ -4,7 +4,7 @@
 
 \usepackage{amsfonts}
 \usepackage{amssymb,amsmath}
-\usepackage{hyperref}
+%\usepackage{hyperref}    % retirado para evitar erros ao submeter para IEEE (pdfXpress)
 \usepackage{algpseudocode}
 \usepackage{graphicx}
 \usepackage{siunitx}       % to align numbers by decimal points on tabular cells
