aknoledge no CEC2016

--- a/doc/pubs/IEEE-CEC2016/tex/paper.tex
+++ b/doc/pubs/IEEE-CEC2016/tex/paper.tex
@@ -37,7 +37,7 @@
 
 \begin{document}
 
-\title{ \vspace{0.25in}
+\title{ 
 A shuffled complex evolution algorithm for
 the multidimensional knapsack problem using core concept}
 
@@ -91,6 +91,10 @@ demanding a small amount of processing time.
 \section{Conclusions and future remarks}
 \label{sec:conc}
 \input{concl.tex}
+
+\section{Acknowledgement}
+The author would like to thank Funda\c c\~ao de Amparo \`a Pesquisa do
+Esp\'irito Santo for supporting this research.
 
 %\newpage
 
