atualizacao nos nomes tags

--- a/misc/tags-convites/doc.tex
+++ b/misc/tags-convites/doc.tex
@@ -64,6 +64,7 @@
 \put(\xI, \yIV){\parbox{\pwid}{\yield{Bruno}}}
 \put(\xII, \yIV){\parbox{\pwid}{\yield{Washington e família}}}
 \put(\xIII, \yIV){\parbox{\pwid}{\yield{Carol e família}}}
+\put(190, -650){\LARGE1} 
 \end{picture}
 \newpage
 \begin{picture}(0,0)
@@ -79,6 +80,7 @@
 \put(\xI, \yIV){\parbox{\pwid}{\yield{Thiago e família}}}
 \put(\xII, \yIV){\parbox{\pwid}{\yield{Léo e Cláudia}}}
 \put(\xIII, \yIV){\parbox{\pwid}{\yield{Mônia e família}}}
+\put(190, -650){\LARGE2} 
 \end{picture}
 \newpage
 \begin{picture}(0,0)
@@ -94,6 +96,7 @@
 \put(\xI, \yIV){\parbox{\pwid}{\yield{Paulo e família}}}
 \put(\xII, \yIV){\parbox{\pwid}{\yield{Eduardo e família}}}
 \put(\xIII, \yIV){\parbox{\pwid}{\yield{Ludmila}}}
+\put(190, -650){\LARGE3} 
 \end{picture}
 \newpage
 \begin{picture}(0,0)
@@ -109,6 +112,7 @@
 \put(\xI, \yIV){\parbox{\pwid}{\yield{Bruna e família}}}
 \put(\xII, \yIV){\parbox{\pwid}{\yield{Lucas e Bárbara}}}
 \put(\xIII, \yIV){\parbox{\pwid}{\yield{Hélio e família}}}
+\put(190, -650){\LARGE4} 
 \end{picture}
 \newpage
 \begin{picture}(0,0)
@@ -124,6 +128,7 @@
 \put(\xI, \yIV){\parbox{\pwid}{\yield{Thais}}}
 \put(\xII, \yIV){\parbox{\pwid}{\yield{Anderson e família}}}
 \put(\xIII, \yIV){\parbox{\pwid}{\yield{Abner e Ramona}}}
+\put(190, -650){\LARGE5} 
 \end{picture}
 \newpage
 \begin{picture}(0,0)
@@ -139,6 +144,7 @@
 \put(\xI, \yIV){\parbox{\pwid}{\yield{Jean}}}
 \put(\xII, \yIV){\parbox{\pwid}{\yield{Gabriel e Ester}}}
 \put(\xIII, \yIV){\parbox{\pwid}{\yield{Alexandre e Meire}}}
+\put(190, -650){\LARGE6} 
 \end{picture}
 \newpage
 \begin{picture}(0,0)
@@ -154,6 +160,7 @@
 \put(\xI, \yIV){\parbox{\pwid}{\yield{Jocasta e Paulo Henrique}}}
 \put(\xII, \yIV){\parbox{\pwid}{\yield{Marcelo Dornelas e família}}}
 \put(\xIII, \yIV){\parbox{\pwid}{\yield{Heráclito e Marlene}}}
+\put(190, -650){\LARGE7} 
 \end{picture}
 \newpage
 \begin{picture}(0,0)
@@ -169,6 +176,7 @@
 \put(\xI, \yIV){\parbox{\pwid}{\yield{Fernanda e Lucas}}}
 \put(\xII, \yIV){\parbox{\pwid}{\yield{Marcelo Nobre}}}
 \put(\xIII, \yIV){\parbox{\pwid}{\yield{Conrado e Júlia}}}
+\put(190, -650){\LARGE8} 
 \end{picture}
 \newpage
 \begin{picture}(0,0)
@@ -184,6 +192,7 @@
 \put(\xI, \yIV){\parbox{\pwid}{\yield{Késia}}}
 \put(\xII, \yIV){\parbox{\pwid}{\yield{Rodrigo e Sara}}}
 \put(\xIII, \yIV){\parbox{\pwid}{\yield{Laudicéia}}}
+\put(190, -650){\LARGE9} 
 \end{picture}
 \newpage
 \begin{picture}(0,0)
@@ -199,6 +208,7 @@
 \put(\xI, \yIV){\parbox{\pwid}{\yield{Lucas}}}
 \put(\xII, \yIV){\parbox{\pwid}{\yield{Rafael e Júlia}}}
 \put(\xIII, \yIV){\parbox{\pwid}{\yield{Marcelo e Sabrina}}}
+\put(190, -650){\LARGE10} 
 \end{picture}
 \newpage
 \begin{picture}(0,0)
@@ -214,6 +224,7 @@
 \put(\xI, \yIV){\parbox{\pwid}{\yield{Fábio Rocha}}}
 \put(\xII, \yIV){\parbox{\pwid}{\yield{Ramiro e Kely}}}
 \put(\xIII, \yIV){\parbox{\pwid}{\yield{Felipe e Fernanda}}}
+\put(190, -650){\LARGE11} 
 \end{picture}
 \newpage
 \begin{picture}(0,0)
@@ -229,6 +240,7 @@
 \put(\xI, \yIV){\parbox{\pwid}{\yield{Fabio Moraes}}}
 \put(\xII, \yIV){\parbox{\pwid}{\yield{Guilherme e família}}}
 \put(\xIII, \yIV){\parbox{\pwid}{\yield{Daniel Medeiros}}}
+\put(190, -650){\LARGE12} 
 \end{picture}
 \newpage
 \begin{picture}(0,0)
@@ -244,6 +256,7 @@
 \put(\xI, \yIV){\parbox{\pwid}{\yield{Julmar Valadão}}}
 \put(\xII, \yIV){\parbox{\pwid}{\yield{Alfredo e família}}}
 \put(\xIII, \yIV){\parbox{\pwid}{\yield{Diego Lucchi}}}
+\put(190, -650){\LARGE13} 
 \end{picture}
 \newpage
 \begin{picture}(0,0)
@@ -259,6 +272,7 @@
 \put(\xI, \yIV){\parbox{\pwid}{\yield{Thayara Ferreira}}}
 \put(\xII, \yIV){\parbox{\pwid}{\yield{Daniely França}}}
 \put(\xIII, \yIV){\parbox{\pwid}{\yield{Daniel Carrareto}}}
+\put(190, -650){\LARGE14} 
 \end{picture}
 \newpage
 \begin{picture}(0,0)
@@ -274,6 +288,7 @@
 \put(\xI, \yIV){\parbox{\pwid}{\yield{Thiago Rangel}}}
 \put(\xII, \yIV){\parbox{\pwid}{\yield{Israel e Betânia}}}
 \put(\xIII, \yIV){\parbox{\pwid}{\yield{Rafael e Dabiane}}}
+\put(190, -650){\LARGE15} 
 \end{picture}
 \newpage
 \begin{picture}(0,0)
@@ -289,6 +304,7 @@
 \put(\xI, \yIV){\parbox{\pwid}{\yield{Victor e Larissa}}}
 \put(\xII, \yIV){\parbox{\pwid}{\yield{Marcelo e família}}}
 \put(\xIII, \yIV){\parbox{\pwid}{\yield{Pedro David e Flávia}}}
+\put(190, -650){\LARGE16} 
 \end{picture}
 \newpage
 \begin{picture}(0,0)
@@ -304,6 +320,7 @@
 \put(\xI, \yIV){\parbox{\pwid}{\yield{Gabrielle Possatti e família}}}
 \put(\xII, \yIV){\parbox{\pwid}{\yield{Chequer}}}
 \put(\xIII, \yIV){\parbox{\pwid}{\yield{Walace Junior}}}
+\put(190, -650){\LARGE17} 
 \end{picture}
 \newpage
 \begin{picture}(0,0)
@@ -319,6 +336,7 @@
 \put(\xI, \yIV){\parbox{\pwid}{\yield{Alexandre e Renata}}}
 \put(\xII, \yIV){\parbox{\pwid}{\yield{Andrey e Alina}}}
 \put(\xIII, \yIV){\parbox{\pwid}{\yield{Else Maia}}}
+\put(190, -650){\LARGE18} 
 \end{picture}
 \newpage
 \begin{picture}(0,0)
@@ -330,6 +348,19 @@
 \put(\xIII, \yII){\parbox{\pwid}{\yield{Elizabeth e família}}}
 \put(\xI, \yIII){\parbox{\pwid}{\yield{Issac e família}}}
 \put(\xII, \yIII){\parbox{\pwid}{\yield{Fábio e Débora}}}
+\put(\xIII, \yIII){\parbox{\pwid}{\yield{Jedair e família}}}
+\put(\xI, \yIV){\parbox{\pwid}{\yield{Eduardo e família}}}
+\put(\xII, \yIV){\parbox{\pwid}{\yield{Wesley e Fabíola}}}
+\put(\xIII, \yIV){\parbox{\pwid}{\yield{Rodrigo e Sarah}}}
+\put(190, -650){\LARGE19} 
+\end{picture}
+\newpage
+\begin{picture}(0,0)
+\put(\xI, \yI){\parbox{\pwid}{\yield{Marco Fábio}}}
+\put(\xII, \yI){\parbox{\pwid}{\yield{Andre Bom Alves}}}
+\put(\xIII, \yI){\parbox{\pwid}{\yield{Roger Cruz}}}
+\put(\xI, \yII){\parbox{\pwid}{\yield{Celso Munaro}}}
+\put(190, -650){\LARGE20} 
 \end{picture}
 
 \end{document}
