nomes adicionados na lista de convidados

--- a/misc/tags-convites/doc.tex
+++ b/misc/tags-convites/doc.tex
@@ -360,6 +360,9 @@
 \put(\xII, \yI){\parbox{\pwid}{\yield{Andre Bom Alves}}}
 \put(\xIII, \yI){\parbox{\pwid}{\yield{Roger Cruz}}}
 \put(\xI, \yII){\parbox{\pwid}{\yield{Celso Munaro}}}
+\put(\xII, \yII){\parbox{\pwid}{\yield{Allan Freitas e família}}}
+\put(\xIII, \yII){\parbox{\pwid}{\yield{Deyvid Oss}}}
+\put(\xI, \yIII){\parbox{\pwid}{\yield{Erivelton e Mônica}}}
 \put(190, -650){\LARGE20} 
 \end{picture}
 
