IEEE-TPD: reduzido tamanho do estilo das equacoes

--- a/doc/pubs/IEEE-TPD2015/intro.tex
+++ b/doc/pubs/IEEE-TPD2015/intro.tex
@@ -57,14 +57,14 @@ a complex combinatorial problem, thus the current \textit{de facto} procedure ha
 Since reducing non-technical losses is an important activity of EDCOs, this motivates the use of computational techniques to 
 find the best, or at least good solutions to the problem.
 
-In this paper, we formulate the problem previously presented formally as a generalization of the Knapsack Problem, a well known problem in 
+In this paper, we formulate the problem previously presented formally as a generalization of the knapsack problem, a well known problem in 
 Combinatorial Optimization. Due to the novelty of the formulation and some constraints on the availability of real instances of the problem, 
 an instance generator is also presented, and we define a set of benchmark instances. Two heuristics are also proposed to solve the problem, one based on a greedy approach, 
 named GALP, and the other on the Tabu Search metaheurisic, the TSLP. Experimental tests are then conducted, solving the instances with the CPLEX solver and the two proposed
 heuristics, and a comparison between those three approaches is made.
 
 The remainder of the paper is organized as follows: Section~\ref{sec:model} defines formally the
-problem of choosing non-technical loss reducing actions, and explain its relation to the Knapsack Problem.
+problem of choosing non-technical loss reducing actions, and explain its relation to the knapsack problem.
 Section~\ref{sec:approach} introduces the approches used for solving the problem.
 Section~\ref{sec:exp_data} introduces the instance generator used to create our set of benchmark instances. 
 In Section~\ref{sec:exp_results} we present our experimental evaluation. Finally, in Section~\ref{sec:conclu} 
