--- a/doc/pubs/IEEE-TPD2015/main.tex
+++ b/doc/pubs/IEEE-TPD2015/main.tex
@@ -24,6 +24,7 @@
 \renewcommand{\algorithmicensure}{\textbf{Output:}}
 \newcommand{\figpar}{\vspace*{-3mm}}
 \newcommand{\figspaces}{\vspace*{-7mm}}
+\newcommand{\mymathstyle}{\textstyle}
 
 \IEEEoverridecommandlockouts
 
