--- a/doc/pubs/IEEE-TPD2015/abstract.tex
+++ b/doc/pubs/IEEE-TPD2015/abstract.tex
@@ -3,12 +3,12 @@ Electricity losses during distribution due to non-technical sources are among th
 profit loss for electricity distribution companies (EDCOs). In Brasil, part of that profit loss can be
 recovered through an increase in the energy bill. However, the maximum value of that increase is 
 limited by the regulatory agency in the form of non-technical loss reduction goals. The optimization 
-problem addressed in this work treats the loss reduction problem from the EDCOs' point of view. 
+problem addressed in this work treats the loss reduction problem from the EDCOs point of view. 
 In order to achieve the reduction goals established by the regulatory agency, EDCOs
 have several loss reduction actions which are allocated in multiyear loss reduction plans. 
 These plans try to achieve the goals without exceeding some predefined budgets,
 always aiming to obtain the highest possible profit for the EDCO. This work approaches
-the problem of the plan's definition as a generalization of the Knapsack Problem.
+the problem of the plan's definition as a generalization of the knapsack problem.
 A formal model is defined as an integer programming problem, and it's hardness is analysed
 through computational experiments using a generic solver applied to a variety of
 artificial instances. Two heuristics are then proposed, the first
