--- a/doc/pubs/IEEE-TPD2015/main.tex
+++ b/doc/pubs/IEEE-TPD2015/main.tex
@@ -12,7 +12,7 @@
 \usepackage{graphics}
 \usepackage{array}
 
-%\usepackage{flushend}
+\usepackage{flushend}
 
 %\modulolinenumbers[5]
 
@@ -74,7 +74,7 @@ The authors wish to thank EDP Energias do Brasil S.A. for cooperation in this re
 \bibliographystyle{ieeetr}
 \bibliography{mybibfile}
 
-%\flushend
+\flushend
 
 \end{document}
 
